height issue on mobile

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -29,7 +29,7 @@ header {
 .vertical-center-container {
   display: flex;
   align-items: center;
-  height: calc(100vh - 3rem);
+  height: calc(100vh - 4rem);
   justify-content: center;
 }
 
